# Segurito

./: LICENSE  README.md  requirements.txt
3Ddesigns/: Adaptador Lidar.stl  Cupula.stl
3Dmodels/: Adaptador Base.stl  Adaptador Sensor PIR.stl  Base.stl  Segundo Piso.stl
LICENSE/install/: setup.ps1  setup.sh
LICENSE/src/segurito_production/launch/: mapping_launch.py
LICENSE/src/segurito_production/segurito_production/: drive_base.py
circuits/: EsquemaCircuitos.fzz
client/ros2_ws/install/: local_setup.sh  setup.bash  setup.zsh
controlador/ros2_ws/src/segurito_production/: package.xml  setup.py
robot/ros2_ws/src/segurito_production/: package.xml  setup.py
robot/ros2_ws/src/segurito_production/launch/: mapping_launch.py
robot/ros2_ws/src/segurito_production/segurito_production/: drive_base.py  odometria_node.py  speaker.py
server/explore_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
server/explore_ws/log/: latest_build
server/ros2_ws/: output.txt
server/ros2_ws/log/: latest_build
server/ros2_ws/src/segurito_production/: setup.cfg
web/segurito-ui/: index.html  package-lock.json  package.json
web/segurito-ui/src/: App.tsx  main.tsx  theme.ts
web/segurito-ui/src/layout/: TopBar.tsx
web/segurito-ui/src/pages/: Dashboard.tsx  MapGallery.tsx  TeleopPage.tsx  VideoGallery.tsx
web/segurito-ui/src/ros/: CameraViewer.tsx  CameraWithDetections.tsx  DetectorOverlay.tsx  ExploreButtons.tsx  MapViewer.tsx  MicPublisher.tsx  PersonAlert.tsx  RobotStatus.tsx  RosContext.tsx  Teleop.tsx
web/segurito-ui/src/styles/: map.css
web/segurito_web_ws/src/segurito_interfaces/: CMakeLists.txt  package.xml
web/segurito_web_ws/src/segurito_interfaces/srv/: ListMaps.srv  ListVideos.srv
(+43 files in other folders)
