<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>segurito_production</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="neverdiedooms@todo.todo">neverdiedooms</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>              <!-- núcleo Python de ROS 2 -->
  <exec_depend>audio_common_msgs</exec_depend>     <!-- mensajes AudioData -->
  <exec_depend>python3-pyaudio</exec_depend>       <!-- librería ALSA/PortAudio -->



  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>python3-rpi.gpio</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
