<?xml version="3.0"?>
<package format="3">
  <name>segurito_interfaces</name>
  <version>0.0.1</version>
  <description>Mensajes y servicios del proyecto Segurito</description>

  <maintainer email="you@example.com">Tu Nombre</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
